--- a/LinModPredict.Rmd
+++ b/LinModPredict.Rmd
@@ -8,5 +8,9 @@ date: "2024-04-09"
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
+require(tidyverse)
+require(tigerstats)
+require(lubrudate)
+
 data <- read.csv(file="https://onlinestatbook.com/case_studies_rvls/physical_strength/data.txt",sep="",header=TRUE)  
 ```
