--- a/LinModPredict.Rmd
+++ b/LinModPredict.Rmd
@@ -14,3 +14,15 @@ require(lubrudate)
 
 data <- read.csv(file="https://onlinestatbook.com/case_studies_rvls/physical_strength/data.txt",sep="",header=TRUE)  
 ```
+
+
+## Model 1 is SIMS~ARM
+### scattered plot
+
+```{r}
+basicNN <- ggplot(data,aes(y=SIMS,x=ARM))
+```
+
+```{r}
+basicNN + geom_point()
+```
