--- a/LinModPredict.Rmd
+++ b/LinModPredict.Rmd
@@ -20,9 +20,35 @@ data <- read.csv(file="https://onlinestatbook.com/case_studies_rvls/physical_str
 ### scattered plot
 
 ```{r}
-basicNN <- ggplot(data,aes(y=SIMS,x=ARM))
+basicAMR <- ggplot(data,aes(y=SIMS,x=ARM))
 ```
 
 ```{r}
-basicNN + geom_point() + ggtitle ("SIMS vs ARM") + theme(plot.title = element_text(hjust =  0.5, size = 20)) + geom_smooth(method = lm)
+basicAMR + geom_point() + ggtitle ("SIMS vs ARM") + theme(plot.title = element_text(hjust =  0.5, size = 20)) + geom_smooth(method = lm)
+```
+
+```{r}
+model.1 <- lm(SIMS~ARM, data=data)
+```
+
+
+```{r}
+target<-data.frame(ARM = 88, GRIP = 94)
+```
+
+```{r}
+predict(model.1, target, interval=c("prediction"))
+```
+
+
+## Model 2 is SIMS~GRIP
+### scattered plot
+
+
+```{r}
+basicGRIP <- ggplot(data,aes(y=SIMS,x=GRIP))
+```
+
+```{r}
+basicGRIP + geom_point() + ggtitle ("SIMS vs GRIP") + theme(plot.title = element_text(hjust =  0.5, size = 20)) + geom_smooth(method = lm)
 ```
