--- a/LinModPredict.Rmd
+++ b/LinModPredict.Rmd
@@ -64,15 +64,17 @@ predict(model.2, target, interval=c("prediction"))
 
 
 ## Model 3 is SIMS~ARM+GRIP
-### scattered plot
-
 
 ```{r}
-basicSIMS <- ggplot(data,aes(y=SIMS,x=GRIP))
-```
-
-```{r}
-basicSIMS + geom_point() + ggtitle ("SIMS vs GRIP") + theme(plot.title = element_text(hjust =  0.5, size = 20)) + geom_smooth(method = lm)
+model.3 <- lm(SIMS~ARM+GRIP, data=data)
+summary.lm(model.3)
 ```
 
 
+```{r}
+predict(model.3, target, interval=c("prediction"))
+```
+
+```{r}
+predict(model.3, target, interval=c("confidence"))
+```
