--- a/LinModPredict.Rmd
+++ b/LinModPredict.Rmd
@@ -74,7 +74,17 @@ summary.lm(model.3)
 ```{r}
 predict(model.3, target, interval=c("prediction"))
 ```
-
 ```{r}
 predict(model.3, target, interval=c("confidence"))
 ```
+
+### Compare Model 1 with Model 3 using ANova
+
+```{r}
+anova(model.1, model.3)
+```
+
+
+
+
+
