--- a/LinModPredict.Rmd
+++ b/LinModPredict.Rmd
@@ -78,15 +78,17 @@ predict(model.3, target, interval=c("prediction"))
 predict(model.3, target, interval=c("confidence"))
 ```
 
-### Compare Model 1 with Model 3 using ANova
+### Compare Model 1 with Model 3 using anova
 
 ```{r}
 anova(model.1, model.3)
 ```
-
+### Compare Model 2 with Model 3 using anova
 
 ```{r}
 anova(model.2, model.3)
 ```
+
+
 
 
