--- a/LinModPredict.Rmd
+++ b/LinModPredict.Rmd
@@ -92,6 +92,6 @@ From the previous comparison, the p-value When comparing model, one with model, 
 anova(model.2, model.3)
 ```
 
-
+From the previous comparison, the p-value when comparing model, one with model, three was very small. It equaled 1.495e-09. This tells us that the model three is better than model two in addition, the residual sum of the square between the two models show that the model three is more accurate than the model two by approximately 55 points.
 
 
