--- a/LinModPredict.Rmd
+++ b/LinModPredict.Rmd
@@ -94,4 +94,12 @@ anova(model.2, model.3)
 
 From the previous comparison, the p-value when comparing model, one with model, three was very small. It equaled 1.495e-09. This tells us that the model three is better than model two in addition, the residual sum of the square between the two models show that the model three is more accurate than the model two by approximately 55 points.
 
+### Compare Model 1 with Model 2 using anova
+
+```{r}
+anova(model.1, model.2)
+```
+
+For the previous comparison, we couldn't get a p-value, because the two models are not nested as one have ARM/GRIP the other doesn't. Therefore, there is no bias for comparison. However, for the residual sum of squares, we can see the model one is more accurate as it has a lower sum of square errors.
+
 
